# demo-python-memory-profiler

./: .gitignore  README.md
app/: Makefile  main.py  pyproject.toml  requirements.txt
