[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kavisek <kavi.skhon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.10.8"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"
numpy = "^1.25.0"
memory-profiler = "^0.61.0"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
